[package]
name = "netget"
version = "0.1.0"
edition = "2021"

[features]
default = ["all-protocols"]

# Terminal snapshot testing (PTY-based TUI tests)
terminal-snapshot = []

# GPU monitoring (cross-platform: NVIDIA, AMD, Intel)
gpu = ["dep:gfxinfo"]

# Android Termux: Pure-Rust protocols compatible with Android/Termux environment
# Excludes: BLE (needs BlueZ), NFC (needs PC/SC), USB (needs USB/IP), packet capture (needs libpcap/root), STUN/TURN (old nix crate), WireGuard/OpenVPN (not gated for Android)
# Uses vendored OpenSSL to compile from source (no system OpenSSL needed)
android-termux = [
    "dep:openssl-sys",  # Force vendored OpenSSL compilation from source
    "tcp",
    "socket_file",
    "http",
    "http2",
    "http3",
    "pypi",
    "maven",
    "udp",
    "dc",
    "dns",
    "dot",
    "doh",
    "dhcp",
    "bootp",
    "ntp",
    "whois",
    "snmp",
    "igmp",
    "syslog",
    "ssh",
    "ssh-agent",
    "svn",
    "irc",
    "xmpp",
    "telnet",
    "smtp",
    "mdns",
    "mysql",
    "ipp",
    "postgresql",
    "redis",
    "rss",
    "proxy",
    "webdav",
    "nfs",
    "cassandra",
    "smb",
    # STUN/TURN excluded (use old nix-0.8.1 crate incompatible with modern Rust)
    "webrtc",
    "sip",
    "ldap",
    "imap",
    "pop3",
    "nntp",
    "mqtt",
    "amqp",
    "socks5",
    "elasticsearch",
    "dynamo",
    "s3",
    "sqs",
    "npm",
    "openai",
    "ollama",
    "oauth2",
    "jsonrpc",
    # WireGuard/OpenVPN excluded (platform-specific, not gated for Android)
    "ipsec",
    "bgp",
    # OSPF excluded (requires raw sockets/root)
    "isis",
    "rip",
    "bitcoin",
    "mcp",
    "grpc",
    "xmlrpc",
    "tor",
    "vnc",
    "openapi",
    "openid",
    "git",
    "mercurial",
    "kafka",
    "kubernetes",
    "etcd",
    "zookeeper",
    "torrent-tracker",
    "torrent-dht",
    "torrent-peer",
    "tls",
    "saml-idp",
    "saml-sp",
    # BLE protocols excluded (need BlueZ on Linux, not available on Android)
    # NFC protocols excluded (need PC/SC library, not on Android)
    # USB protocols excluded (need USB/IP kernel module)
    # DataLink/ARP excluded (need libpcap and root access)
]

tcp = []
socket_file = []  # Unix domain socket server & client for IPC (Unix/Linux/macOS only, gated with #[cfg(unix)]), no extra deps
http = ["dep:rustls", "dep:tokio-rustls", "dep:rustls-pemfile", "dep:rcgen"]
http2 = ["dep:h2", "dep:rustls", "dep:tokio-rustls", "dep:rustls-pemfile", "dep:rcgen"]
pypi = ["http", "urlencoding"]  # PyPI (Python Package Index) uses HTTP and URL encoding for search (PEP 503 Simple Repository API)
maven = []  # Maven repository server (HTTP-based artifact distribution)
udp = []
datalink = []  # DataLink uses only pcap, no extra deps
arp = ["pnet"]  # ARP (Address Resolution Protocol) uses pnet for packet handling
dc = []  # DC (Direct Connect) uses only TCP, no extra deps
dns = ["hickory-server", "hickory-proto", "dep:hickory-client"]
dot = ["dns", "hickory-server/dns-over-rustls", "hickory-proto/dns-over-rustls", "dep:rustls", "dep:tokio-rustls", "dep:rustls-pemfile", "dep:rcgen", "dep:webpki-roots"]  # DNS-over-TLS server
doh = ["dns", "hickory-server/dns-over-https-rustls", "hickory-proto/dns-over-https-rustls", "dep:rustls", "dep:tokio-rustls", "dep:rustls-pemfile", "dep:rcgen", "dep:h2"]  # DNS-over-HTTPS server
dhcp = ["dhcproto"]
bootp = ["dhcproto"]  # BOOTP (Bootstrap Protocol) - DHCP predecessor, uses same packet format
ntp = ["dep:rsntp"]  # NTP client support
bluetooth-ble-client = ["btleplug"]  # Bluetooth Low Energy (BLE) client for connecting to BLE devices
bluetooth-ble = ["ble-peripheral-rust"]  # Bluetooth Low Energy (BLE) GATT server (peripheral mode)
nfc = ["dep:pcsc", "dep:ndef-rs"]  # NFC card emulation server via PC/SC (ISO14443, MIFARE, NFC tags)
nfc-client = ["dep:pcsc", "dep:ndef-rs"]  # NFC reader/writer client via PC/SC (ISO14443, APDU, NDEF)
bluetooth-ble-keyboard = ["bluetooth-ble"]  # BLE HID keyboard server
bluetooth-ble-mouse = ["bluetooth-ble"]  # BLE HID mouse server
bluetooth-ble-beacon = ["bluetooth-ble"]  # BLE beacon (iBeacon, Eddystone)
bluetooth-ble-remote = ["bluetooth-ble"]  # BLE media remote control
bluetooth-ble-battery = ["bluetooth-ble"]  # BLE Battery Service
bluetooth-ble-heart-rate = ["bluetooth-ble"]  # BLE Heart Rate Service
bluetooth-ble-thermometer = ["bluetooth-ble"]  # BLE Health Thermometer
bluetooth-ble-environmental = ["bluetooth-ble"]  # BLE Environmental Sensing
bluetooth-ble-proximity = ["bluetooth-ble"]  # BLE Proximity/Find Me
bluetooth-ble-gamepad = ["bluetooth-ble"]  # BLE HID gamepad
bluetooth-ble-presenter = ["bluetooth-ble"]  # BLE presentation clicker
bluetooth-ble-file-transfer = ["bluetooth-ble"]  # BLE file transfer
bluetooth-ble-data-stream = ["bluetooth-ble"]  # BLE real-time data streaming
bluetooth-ble-cycling = ["bluetooth-ble"]  # BLE Cycling Speed and Cadence
bluetooth-ble-running = ["bluetooth-ble"]  # BLE Running Speed and Cadence
bluetooth-ble-weight-scale = ["bluetooth-ble"]  # BLE Weight Scale
whois = []  # WHOIS uses only TCP, no extra deps
snmp = ["rasn-snmp", "rasn", "rasn-smi", "dep:snmp"]
igmp = []  # IGMP multicast group management, no extra deps
syslog = ["syslog_loose"]
ssh = ["russh", "russh-keys", "russh-sftp", "dep:ssh2"]
ssh-agent = ["dep:ssh-agent-lib", "dep:tempfile"]  # SSH Key Agent protocol (server and client for key management)
svn = []  # SVN (Subversion) uses only TCP, no extra deps
irc = ["dep:irc"]  # IRC client support
xmpp = ["dep:tokio-xmpp", "dep:xmpp-parsers"]  # XMPP/Jabber instant messaging client
telnet = ["nectar"]
smtp = ["rust-smtp-server", "dep:rustls", "dep:tokio-rustls", "dep:rustls-pemfile", "dep:rcgen", "dep:lettre"]
mdns = ["mdns-sd"]
mysql = ["dep:opensrv-mysql", "dep:mysql_async"]
ipp = ["dep:ipp"]
postgresql = ["dep:pgwire", "dep:tokio-postgres"]
redis = ["dep:redis-protocol", "dep:redis"]
rss = ["dep:rss"]  # RSS feed server and client (RSS 2.0 XML generation and parsing)
proxy = ["http-mitm-proxy", "dep:rcgen", "tokio-native-tls", "native-tls"]
http_proxy = ["http-mitm-proxy", "dep:rcgen", "tokio-native-tls", "native-tls"]  # HTTP proxy (alternate name)
webdav = ["dav-server", "dep:reqwest_dav"]
nfs = ["nfsserve", "dep:nfs3_client", "dep:nfs3_types"]
cassandra = ["dep:cassandra-protocol", "tcp", "dep:scylla"]
smb = ["smb-msg"]
stun = ["dep:webrtc-stun", "dep:stunclient"]
smb-client = ["smb", "pavao"]  # SMB client requires native libsmbclient library
turn = ["dep:webrtc-turn"]
webrtc = ["dep:webrtc"]  # WebRTC client for peer-to-peer data channels (no media)
sip = []  # SIP uses only UDP, no extra deps (manual protocol implementation)
ldap = ["dep:ldap3_proto", "rasn", "dep:ldap3"]
imap = ["imap-codec", "dep:async-imap", "dep:async-native-tls"]  # IMAP uses imap-codec for protocol parsing
pop3 = ["dep:rustls", "dep:tokio-rustls", "dep:rustls-pemfile", "dep:webpki-roots", "dep:rcgen"]  # POP3 email retrieval (manual implementation with TLS support)
nntp = []  # NNTP (Network News Transfer Protocol) for Usenet, uses only TCP, no extra deps
mqtt = ["dep:rumqttd", "dep:rumqttc"]  # MQTT broker and client for IoT messaging
amqp = ["dep:lapin"]  # AMQP broker and client for RabbitMQ compatibility
socks5 = ["dep:tokio-socks"]  # SOCKS5 server and client (client uses tokio-socks)
elasticsearch = []  # Elasticsearch uses only HTTP, no extra deps
dynamo = ["aws-config", "aws-sdk-dynamodb", "aws-smithy-types"]  # DynamoDB client
dynamodb = ["aws-config", "aws-sdk-dynamodb", "aws-smithy-types"]  # DynamoDB client (alternate name)
s3 = ["aws-config", "dep:aws-sdk-s3", "dep:aws-credential-types", "dep:rust-s3"]  # S3 client
sqs = ["aws-config", "aws-sdk-sqs"]  # AWS SQS queue
npm = ["http", "urlencoding"]  # NPM registry server and client (built on HTTP, uses urlencoding for search queries)
openai = ["async-openai"]  # OpenAI API client
ollama = []  # Ollama API server and client (uses existing reqwest, no extra deps)
oauth2 = ["dep:oauth2", "urlencoding"]  # OAuth2 authorization server and client
jsonrpc = []  # JSON-RPC 2.0 server uses only HTTP, no extra deps
saml-idp = []  # SAML Identity Provider (authentication, assertion generation)
saml-sp = ["urlencoding"]  # SAML Service Provider (assertion validation, session management)
saml = ["quick-xml", "urlencoding", "dep:flate2"]  # SAML client (SP-initiated SSO, assertion validation)
wireguard = ["dep:defguard_wireguard_rs", "dep:x25519-dalek"]  # Full WireGuard VPN server with LLM control
openvpn = ["dep:tun", "dep:aes-gcm", "dep:chacha20poly1305", "dep:rustls", "dep:tokio-rustls", "dep:rcgen", "dep:sha2", "dep:hmac", "dep:hkdf"]  # Full OpenVPN VPN server with TLS control channel and data channel encryption
ipsec = []  # IPSec/IKEv2 honeypot (packet detection only, no full crypto)
bgp = ["netgauze-bgp-pkt"]  # BGP routing protocol
ospf = ["udp"]  # OSPF routing protocol (IP protocol 89, raw sockets, requires root/CAP_NET_RAW, tests use UDP)
isis = []  # IS-IS routing protocol (Intermediate System to Intermediate System)
rip = []  # RIP (Routing Information Protocol) v2 - distance-vector routing
bitcoin = ["dep:bitcoin"]  # Bitcoin P2P protocol server (LLM-controlled, not a real full node)
mcp = ["dep:axum", "dep:tower-http"]  # Model Context Protocol (JSON-RPC 2.0 over HTTP/SSE)
grpc = ["dep:tonic", "dep:prost", "dep:prost-reflect", "dep:prost-types", "dep:tonic-reflection", "dep:tower", "dep:tempfile"]  # gRPC server with dynamic schema support
etcd = ["grpc", "dep:etcd-client"]  # etcd v3 key-value store server (KV service via gRPC)
zookeeper = ["dep:zookeeper-async"]  # ZooKeeper distributed coordination server and client with binary protocol support
xmlrpc = ["quick-xml", "dep:xmlrpc"]  # XML-RPC server and client with LLM-controlled method execution
tor = ["dep:tor-netdoc", "dep:tor-cert", "dep:tor-cell", "dep:rustls", "dep:tokio-rustls", "dep:rcgen", "dep:ed25519-dalek", "dep:x25519-dalek", "dep:sha2", "dep:aes", "dep:ctr", "dep:hmac", "dep:hkdf", "dep:arti-client", "dep:tor-rtcompat"]  # Tor directory mirror and OR protocol relay (Guard/Middle/Exit) with cell handling
vnc = []  # VNC server and client with custom RFB protocol implementation
openapi = ["http", "dep:openapi-rs", "dep:matchit"]  # OpenAPI 3.1 server with runtime request validation and route matching
openid = []  # OpenID Connect authentication provider with LLM-controlled token generation
usb-common = ["dep:usbip"]  # Common USB/IP functionality for USB device protocols
usb-keyboard = ["usb-common"]  # USB HID Keyboard virtual device
usb-mouse = ["usb-common"]  # USB HID Mouse virtual device
usb-serial = ["usb-common"]  # USB CDC ACM Serial virtual device
usb-msc = ["usb-common", "memmap2"]  # USB Mass Storage Class virtual device (flash drive/disk)
usb-fido2 = ["usb-common", "ring", "serde_cbor"]  # USB FIDO2/U2F Security Key virtual device
usb-smartcard = ["usb-common", "dep:rsa", "dep:sha2"]  # USB Smart Card (CCID) virtual device via vsmartcard (with RSA crypto support)
usb = ["dep:nusb"]  # USB client for connecting to USB devices
openidconnect = ["dep:openidconnect", "urlencoding"]  # OpenID Connect client for authentication flows
kubernetes = ["dep:kube", "dep:k8s-openapi"]  # Kubernetes client protocol with v1.30 API support
git = ["dep:git2"]  # Git client support
mercurial = ["http", "urlencoding"]  # Mercurial HTTP server with LLM-controlled virtual repositories
kafka = ["dep:kafka-protocol"]  # Apache Kafka broker (rdkafka removed - causes malloc crashes)
http3 = ["dep:quinn", "dep:rustls", "dep:rustls-pemfile", "dep:rcgen", "dep:h3", "dep:h3-quinn", "dep:webpki-roots"]  # HTTP/3 protocol
torrent-tracker = ["dep:serde_bencode"]  # BitTorrent Tracker (HTTP-based peer discovery with announce/scrape)
torrent-dht = ["dep:serde_bencode"]  # BitTorrent DHT (Kademlia-based distributed peer discovery)
torrent-peer = ["dep:serde_bencode"]  # BitTorrent Peer Wire Protocol (peer-to-peer data transfer)
tls = ["dep:rustls", "dep:tokio-rustls", "dep:rustls-pemfile", "dep:rcgen", "dep:webpki-roots"]  # TLS server and client for custom protocols on top of encrypted transport
embedded-llm = ["dep:llama-cpp-2", "dep:hf-hub"]  # Embedded LLM inference via llama.cpp (fallback when Ollama unavailable)
sqlite = ["dep:rusqlite"]  # SQLite database support for protocols (in-memory or file-based)
all-protocols = [
    "tcp",
    "socket_file",
    "http",
    "http2",
    "http3",
    "pypi",
    "maven",
    "udp",
    "datalink",
    "arp",
    "dc",
    "dns",
    "dot",
    "doh",
    "dhcp",
    "bootp",
    "ntp",
    "bluetooth-ble-client",
    "whois",
    "snmp",
    "igmp",
    "syslog",
    "ssh",
    "ssh-agent",
    "svn",
    "irc",
    "xmpp",
    "telnet",
    "smtp",
    "mdns",
    "mysql",
    "ipp",
    "postgresql",
    "redis",
    "rss",
    "proxy",
    "webdav",
    "nfs",
    "cassandra",
    "smb",
    "stun",
    "turn",
    "webrtc",
    "sip",
    "ldap",
    "imap",
    "pop3",
    "nntp",
    "mqtt",
    "amqp",
    "socks5",
    "elasticsearch",
    "dynamo",
    "s3",
    "sqs",
    "npm",
    "openai",
    "ollama",
    "oauth2",
    "jsonrpc",
    "wireguard",
    "openvpn",
    "ipsec",
    "bgp",
    "ospf",
    "isis",
    "rip",
    "bitcoin",
    "mcp",
    "grpc",
    "xmlrpc",
    "tor",
    "vnc",
    "openapi",
    "openid",
    "git",
    "mercurial",
    "kafka",
    "kubernetes",
    "etcd",
    "zookeeper",
    "torrent-tracker",
    "torrent-dht",
    "torrent-peer",
    "tls",
    "saml-idp",
    "saml-sp",
    "usb-keyboard",
    "usb-mouse",
    "usb-serial",
    "usb-msc",
    "usb-fido2",
    "usb-smartcard",
    "usb",
    "bluetooth-ble",
    "bluetooth-ble-keyboard",
    "bluetooth-ble-mouse",
    "bluetooth-ble-beacon",
    "bluetooth-ble-remote",
    "bluetooth-ble-battery",
    "bluetooth-ble-heart-rate",
    "bluetooth-ble-thermometer",
    "bluetooth-ble-environmental",
    "bluetooth-ble-proximity",
    "bluetooth-ble-gamepad",
    "bluetooth-ble-presenter",
    "bluetooth-ble-file-transfer",
    "bluetooth-ble-data-stream",
    "bluetooth-ble-cycling",
    "bluetooth-ble-running",
    "bluetooth-ble-weight-scale",
    "nfc",
    "nfc-client",
    "embedded-llm",
]

[dependencies]
# Async runtime
tokio = { version = "1.41", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec", "compat"] }
tokio-stream = "0.1"

# Low-level system bindings
libc = "0.2"

# OpenSSL (for transitive dependencies like git2, ssh2, native-tls)
# Vendored = compile from source, needed for Android/cross-compilation
openssl-sys = { version = "0.9", optional = true, features = ["vendored"] }

# Terminal UI - using crossterm for rolling terminal
crossterm = { version = "0.28", features = ["event-stream"] }
futures = "0.3"
textwrap = "0.16"
termbg = "0.5"  # Terminal background detection for adaptive theming

# HTTP client for Ollama
reqwest = { version = "0.12", features = ["json", "rustls-tls", "http2"] }

# Ollama Rust client
ollama-rs = { version = "0.3", features = ["stream"] }

# HTTP server
hyper = { version = "1.5", features = ["full"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
http = "1.3"  # Needed for h2 Request/Response types

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"  # TOML serialization for config files

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Byte manipulation
bytes = "1.8"
hex = "0.4"
base64 = "0.22"

# Socket options (SO_REUSEADDR)
socket2 = "0.5"

# File locking for cross-process synchronization
fs2 = "0.4"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Syntax highlighting for script code
syntect = "5.3"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
time = { version = "0.3", features = ["macros", "formatting"] }  # Time handling for rcgen certificates
url = "2.5"  # URL parsing for web approval prompts
regex = "1.11"
urlencoding = { version = "2.1", optional = true }
html2text = "0.12"
once_cell = "1.20"
rand = "0.8"  # Random number generation for crypto
handlebars = "5.1"
walkdir = "2.4"
include_dir = "0.7"  # Embed template directory in binary
sysinfo = "0.32"  # System monitoring (CPU, memory, processes)
gfxinfo = { version = "0.1", optional = true, default-features = false, features = ["gpu_info"] }  # Cross-platform GPU monitoring (NVIDIA, AMD, Intel)

# CLI argument parsing
clap = { version = "4.5", features = ["derive"] }

# Home directory
dirs = "5.0"

# Packet capture (libpcap)
pcap = "2.2"

# ARP (Address Resolution Protocol) packet handling
pnet = { version = "0.35", optional = true }

# DNS server (Hickory DNS, formerly Trust-DNS)
hickory-server = { version = "0.24", optional = true }
hickory-proto = { version = "0.24", optional = true }

# TLS support for DoT and DoH
rustls = { version = "0.23", features = ["ring"], optional = true }
tokio-rustls = { version = "0.26", optional = true }
rustls-pemfile = { version = "2.0", optional = true }
webpki-roots = { version = "0.26", optional = true }  # Root certificates for TLS verification

# HTTP/2 support for DoH
h2 = { version = "0.4", optional = true }

# DHCP server
dhcproto = { version = "0.12", optional = true }

# SNMP agent
rasn-snmp = { version = "0.18", optional = true }
rasn-smi = { version = "0.18", optional = true }
rasn = { version = "0.18", optional = true }

# Syslog server
syslog_loose = { version = "0.22", optional = true }

# SSH server
russh = { version = "0.45", optional = true }
russh-keys = { version = "0.45", optional = true }
russh-sftp = { version = "2.1", optional = true }
async-trait = "0.1"

# SSH Agent protocol (key management server and client)
ssh-agent-lib = { version = "0.5", optional = true }

# Telnet server
nectar = { version = "0.4", optional = true }

# SMTP server
rust-smtp-server = { version = "0.1", optional = true }

# mDNS/DNS-SD service discovery
mdns-sd = { version = "0.15", optional = true }

# MySQL server
opensrv-mysql = { version = "0.7", optional = true }

# IPP (Internet Printing Protocol)
ipp = { version = "5.3", optional = true }

# PostgreSQL server
pgwire = { version = "0.35", optional = true }

# Redis server (RESP protocol)
redis-protocol = { version = "6.0", optional = true }

# HTTP Proxy (MITM)
http-mitm-proxy = { version = "0.16", optional = true }
rcgen = { version = "0.14", optional = true }  # For certificate generation
tokio-native-tls = { version = "0.3", optional = true }
native-tls = { version = "0.2", optional = true }

# WebDAV server
dav-server = { version = "0.8", optional = true }

# NFS server
nfsserve = { version = "0.10", optional = true }

# Cassandra/CQL server
cassandra-protocol = { version = "3.3", optional = true }

# SMB server (message parsing)
smb-msg = { version = "0.10", optional = true }
pavao = { version = "0.2", optional = true }

# STUN server (Session Traversal Utilities for NAT)
webrtc-stun = { version = "0.1", optional = true }
stunclient = { version = "0.4", optional = true }  # STUN client for discovering external IP/port

# TURN server (Traversal Using Relays around NAT)
webrtc-turn = { version = "0.1", optional = true }

# WebRTC client (peer-to-peer data channels, no media)
webrtc = { version = "0.11", optional = true }

# LDAP server (ASN.1 BER encoding for LDAP protocol)
ldap3_proto = { version = "0.3", optional = true }
# rasn is already included via snmp feature, but we explicitly depend on it for LDAP too

# IMAP server (IMAP protocol parsing)
imap-codec = { version = "2.0.0-alpha.6", optional = true }

# XMPP/Jabber client (instant messaging)
tokio-xmpp = { version = "5.0", optional = true }
xmpp-parsers = { version = "0.22", optional = true }

# MQTT broker (IoT messaging)
rumqttd = { version = "0.20", optional = true }

# OpenID Connect client
openidconnect = { version = "3.5", optional = true }

# SOCKS5 client (proxy protocol client)
tokio-socks = { version = "0.5", optional = true }

# BGP server (Border Gateway Protocol)
netgauze-bgp-pkt = { version = "0.7", optional = true, features = ["serde", "codec"] }

# Bitcoin P2P protocol (blockchain P2P network)
bitcoin = { version = "0.32", optional = true }

# WireGuard VPN server (full implementation with LLM control)
defguard_wireguard_rs = { version = "0.7", optional = true, features = ["serde"] }
x25519-dalek = { version = "2.0", optional = true }  # For WireGuard key generation

# OpenVPN VPN server (full implementation with TLS control channel)
tun = { version = "0.7", optional = true, features = ["async"] }  # TUN/TAP interface for VPN tunnels
aes-gcm = { version = "0.10", optional = true }  # AES-GCM encryption for OpenVPN data channel
chacha20poly1305 = { version = "0.10", optional = true }  # ChaCha20-Poly1305 encryption for OpenVPN data channel
# rustls, tokio-rustls, sha2, hmac, hkdf, rand already declared above

# MCP (Model Context Protocol) server
axum = { version = "0.7", optional = true }
tower-http = { version = "0.5", optional = true, features = ["fs", "trace"] }
uuid = { version = "1.11", features = ["v4"] }

# gRPC server with dynamic schema support
tonic = { version = "0.12", optional = true }
prost = { version = "0.13", optional = true }
prost-reflect = { version = "0.14", optional = true }
prost-types = { version = "0.13", optional = true }
tonic-reflection = { version = "0.12", optional = true }
tower = { version = "0.5", optional = true }
tempfile = { version = "3.13", optional = true }
etcd-client = { version = "0.15", optional = true }

# ZooKeeper client
zookeeper-async = { version = "5.0", optional = true }

# XML-RPC server and client (XML parsing for RPC protocol)
quick-xml = { version = "0.37", optional = true, features = ["serialize"] }
xmlrpc = { version = "0.15", optional = true }  # XML-RPC client library

# SAML client (compression for HTTP-Redirect binding)
flate2 = { version = "1.0", optional = true }

# Tor directory mirror (Tor protocol parsing and generation)
tor-netdoc = { version = "0.36", optional = true }  # Tor network document parsing (consensus, descriptors)
tor-cert = { version = "0.36", optional = true }  # Tor certificate handling

# Tor relay (OR protocol cell handling and cryptography)
tor-cell = { version = "0.36", optional = true }  # Tor cell encoding/decoding (RELAY, CREATE, etc.)
ed25519-dalek = { version = "2.1", optional = true }  # Ed25519 signatures for relay identity
sha2 = { version = "0.10", optional = true }  # SHA-256 for ntor handshake
aes = { version = "0.8", optional = true }  # AES for relay cell encryption
ctr = { version = "0.9", optional = true }  # CTR mode for AES
hmac = { version = "0.12", optional = true }  # HMAC for ntor authentication
hkdf = { version = "0.12", optional = true }  # HKDF for key derivation in ntor
# x25519-dalek already used by wireguard feature, don't redeclare
# tokio-rustls already available, don't redeclare
# rcgen already used by proxy feature, don't redeclare

# Display module (for VNC and other protocols requiring image generation)
tiny-skia = "0.11"  # 2D graphics rendering
cosmic-text = "0.12"  # Text rendering with font support
image = "0.25"  # Image buffer manipulation
sys-locale = "0.3"  # System locale detection for text rendering

# VNC server (Remote Frame Buffer protocol)
rfb = { version = "0.1", optional = true }

# OpenAPI 3.1 server (runtime request validation and route matching)
openapi-rs = { git = "https://github.com/baerwang/openapi-rs", optional = true }
matchit = { version = "0.8", optional = true }  # High-performance path router for OpenAPI

# Kafka broker (wire protocol parsing and serialization)
kafka-protocol = { version = "0.14", optional = true }  # Code-generated Kafka protocol support

# HTTP/3 protocol (HTTP over QUIC - UDP-based, encrypted, multiplexed - RFC 9114)
quinn = { version = "0.11", optional = true }  # Async QUIC implementation for HTTP/3
h3 = { version = "0.0.8", optional = true }  # HTTP/3 implementation
h3-quinn = { version = "0.0.10", optional = true }  # QUIC adapter for HTTP/3

# BitTorrent protocols (bencode encoding/decoding)
serde_bencode = { version = "0.2", optional = true }  # Bencode serialization for BitTorrent protocols

# AWS SDK for SQS and DynamoDB clients
aws-config = { version = "1.5", features = ["behavior-version-latest"], optional = true }
aws-sdk-sqs = { version = "1.86", optional = true }
aws-sdk-dynamodb = { version = "1.52", optional = true }
aws-smithy-types = { version = "1.3", optional = true }

# OpenAI API client
async-openai = { version = "0.26", optional = true }
# OAuth2 client
oauth2 = { version = "4.4", optional = true }

# Client protocol dependencies
# FTP client
suppaftp = { version = "6.0", optional = true }
# SNMP client
snmp = { version = "0.2", optional = true }
# DNS client (includes TLS for DoT/DoH)
hickory-client = { version = "0.24", optional = true, features = ["dns-over-rustls", "dns-over-https-rustls"] }
# NTP client
rsntp = { version = "4.0", optional = true }
# SSH client
ssh2 = { version = "0.9", optional = true }
# IRC client
irc = { version = "1.1", optional = true }
# SMTP client
lettre = { version = "0.11", optional = true }
# MySQL client
mysql_async = { version = "0.34", optional = true }
# PostgreSQL client
tokio-postgres = { version = "0.7", optional = true }
# Redis client
redis = { version = "0.27", optional = true, features = ["tokio-comp"] }
# RSS feed generation and parsing
rss = { version = "2.0", optional = true }
# WebDAV client
reqwest_dav = { version = "0.2", optional = true }
# NFS client
nfs3_client = { version = "0.7", optional = true, features = ["tokio"] }
# Cassandra client
scylla = { version = "1.3", optional = true }
# LDAP client
ldap3 = { version = "0.11", optional = true }
# IMAP client
async-imap = { version = "0.11", optional = true }
async-native-tls = { version = "0.5", optional = true }
# S3 client
rust-s3 = { version = "0.37", optional = true }
aws-sdk-s3 = { version = "1.90", optional = true }
aws-credential-types = { version = "1.2", optional = true }
# Tor client
arti-client = { version = "0.36", optional = true }
tor-rtcompat = { version = "0.36", optional = true }
# Git client
git2 = { version = "0.19", optional = true }
# MQTT client
rumqttc = { version = "0.24", optional = true }
# AMQP client
lapin = { version = "4.0.0-rc.1", optional = true }
# Kafka client
rdkafka = { version = "0.36", optional = true }
# Kubernetes client with v1.30 API support (latest in k8s-openapi 0.24)
kube = { version = "0.99", optional = true, features = ["client", "rustls-tls"] }
k8s-openapi = { version = "0.24", optional = true, features = ["v1_30"] }
# NFS types for NFSv3 protocol
nfs3_types = { version = "0.4", optional = true }
# Bluetooth Low Energy (BLE) client - cross-platform (Windows, macOS, Linux)
btleplug = { version = "0.11", optional = true }
# Bluetooth Low Energy (BLE) server/peripheral - cross-platform (Windows, macOS, Linux)
ble-peripheral-rust = { version = "0.2", optional = true }
# NFC (Near Field Communication) via PC/SC - cross-platform smart card API (Windows/macOS native, Linux pcscd)
pcsc = { version = "2.9", optional = true }
# NDEF (NFC Data Exchange Format) message parsing and generation
ndef-rs = { version = "0.2", optional = true }
# USB client
nusb = { version = "0.1", optional = true }

# USB/IP protocol for virtual USB device creation
usbip = { version = "0.3", optional = true }

# Memory-mapped file I/O for USB MSC disk images
memmap2 = { version = "0.9", optional = true }

# USB FIDO2 dependencies
ring = { version = "0.17", optional = true }  # ECDSA P-256 cryptography for FIDO2
serde_cbor = { version = "0.11", optional = true }  # CBOR encoding for CTAP2

# USB Smart Card dependencies
rsa = { version = "0.9", optional = true, features = ["sha2"] }  # RSA cryptography for smart cards
# sha2 already defined above for wireguard/tor

# Embedded LLM inference (llama.cpp bindings)
llama-cpp-2 = { version = "0.1", optional = true }  # Rust bindings to llama.cpp for local GGUF model inference
hf-hub = { version = "0.3", optional = true, features = ["tokio"] }  # Hugging Face Hub API for model downloading

# SQLite database support (in-memory or file-based)
rusqlite = { version = "0.37", optional = true, features = ["bundled"] }  # SQLite library with bundled SQLite (matches tor-dirmgr dependency)

[dev-dependencies]
# For async tests
tokio-test = "0.4"
# For e2e test setup/teardown
ctor = "0.2"
# For creating temporary mock config files
tempfile = "3.13"

# Terminal snapshot testing
pty-process = "0.5"
vt100 = "0.15"

# E2E test dependencies (only used when protocol features are enabled via test files' cfg gates)
# For process management in e2e tests (Unix signals) and PTY window size
nix = { version = "0.29", features = ["signal", "process", "term", "ioctl"] }
# Axum for creating test HTTP servers in proxy e2e tests
axum = "0.7"
# Axum server with TLS support for HTTPS test servers
axum-server = { version = "0.6", features = ["tls-rustls"] }
# gRPC client dependencies for e2e integration tests
prost = "0.13"
prost-reflect = "0.14"
prost-types = "0.13"
# HTTP/3 (QUIC) client for e2e integration tests
quinn = "0.11"
# BitTorrent client for e2e integration tests
# Using cratetorrent library for programmatic testing, also supports transmission-cli/aria2
sha1 = "0.10"  # For info_hash calculation

[build-dependencies]
# Protocol buffer compiler for etcd gRPC service
prost-build = "0.13"
tonic-build = "0.12"
