[package]
name = "netget-echo-protocol"
version = "0.1.0"
edition = "2021"

[dependencies]
# Reference to the main netget crate to access the Server trait
netget = { path = "../.." }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Logging
tracing = "0.1"

# For handling actions
anyhow = "1.0"
serde_json = "1.0"
